--- a/WebScanner/WebScanner.vcxproj
+++ b/WebScanner/WebScanner.vcxproj
@@ -129,6 +129,15 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <CustomBuild Include="Lexer.l">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
+      <FileType>Document</FileType>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">flex -oLexer.c Lexer.l</Command>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Running Flex</Message>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Lexer.c</Outputs>
+    </CustomBuild>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
